@@ -95,7 +95,7 @@ matrix:
         docker run \
         -e TL_MAKE_FLAGS="${TL_MAKE_FLAGS}" \
         -v ${TRAVIS_BUILD_DIR}:/texlive -w /texlive \
-        -it --rm alpine:3.1 sh -c \
+        -it --rm alpine:3.2 sh -c \
         "apk update; apk add --no-progress bash gcc g++ make perl fontconfig-dev libx11-dev libxmu-dev libxaw-dev; ./Build -C"
     - os: osx
       osx_image: xcode7.3
